projects/google/gke/config/grafana/03-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: NodePort
  selector:
    role: backend
  ports:
    - port: 3000
