projects/google/gke/config/grafana/04-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - grafana.lawrjone.xyz
      secretName: grafana-lawrjone-xyz
  rules:
    - host: grafana.lawrjone.xyz
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: http
